# girbind

./: LICENSE.md  README.md  eslint.config.js  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yaml  release.yaml
src/: cli.ts  configs.json  deps.ts  index.ts  ir.ts  main.ts  names.ts  parse.ts  scaffold.ts  types.ts
src/codegen/: cxx.ts  index.ts  js.ts  ts.ts
src/types/: cxx.json  napi.json  ts.json
templates/: CMakeLists.aggregate.txt  CMakeLists.txt
test/: flatpak.js  flatpak.sh
